@@ -36,6 +36,7 @@ AC_SUBST(GMODULE_LIBS)
 dnl *****************************
 dnl *** Checks for libpthread ***
 dnl *****************************
+AC_CHECK_HEADERS(pthread.h)
 AC_CHECK_LIB(pthread,pthread_create,PTHREAD_LIBS=-lpthread,
 	AC_MSG_ERROR([Cannot find libpthread]))
 AC_SUBST(PTHREAD_LIBS)
