@@ -1,3 +1,8 @@
+2001-09-23  Dick Porter  <dick@ximian.com>
+
+	* configure.in: Check for pthread.h, so that we can check for the
+	HAVE_PTHREAD_H define in config.h
+
 2001-09-21  Dick Porter  <dick@ximian.com>
 
 	* configure.in: Check for libpthread
